Added table for team members

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Jamk-it-tuntikirjaus</h1>
+          <h1>Jamk-it tuntikirjaus</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Jamk-IT-Tuntikirjaus">Jamk-IT-Tuntikirjaus</a></span>
@@ -39,7 +39,28 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p> Page for project work team status 
-<ul>List of teammembers</ul></p>
+<h3>Team introduction</h3>
+        
+<table>
+<thead>
+<tr>
+<th align="left">Face</th>
+<th align="left">Name</th>
+<th align="left">Job title</th>
+<th align="center">Linkedin</th>
+<th align="center">GitHub</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left"><img src="http://student.labranet.jamk.fi/~H9142/cf2016/faces/lauri.JPG" height="64" width="64"></td>
+<td align="left">Mäkinen Lauri</td>
+<td align="left">Project leader</td>
+<td align="center"><a href="https://fi.linkedin.com/in/makinenlauri" title="Link to Linkedin profile"><img src="https://static.licdn.com/scds/common/u/images/logos/favicons/v1/favicon.ico" width="32px" height="32px"></a></td>
+<td align="center"><a href="https://github.com/laurima" title="Link to GitHub profile"><img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px"></a></td>
+</tr>
+</tbody>
+</table>
 
       </section>
 
