No jos nyt kuvat toimii..

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </td>
             <td align="center">
                 <a href="https://fi.linkedin.com/in/makinenlauri" title="Link to Linkedin profile">
-                    <img src="https://static.licdn.com/scds/common/u/images/logos/favicons/v1/favicon.ico" width="32px" height="32px">
+                    <img src="https://lh3.googleusercontent.com/00APBMVQh3yraN704gKCeM63KzeQ-zHUi5wK6E9TjRQ26McyqYBt-zy__4i8GXDAfeys=w300" width="32px" height="32px">
                 </a>
             </td>
             <td align="center">
