--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
                 </a>
             </td>
         </tr>
+              <tr>
+            <td align="left">
+                <img src="https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/12039644_1101613869856548_7877821608962154207_n.jpg?oh=f2257ed451610e3286ca6d4748ec416c&oe=58662D1E" height="64" width="64">
+            </td>
+            <td align="left">
+                Ellinoora Aurasmaa
+            </td>
+            <td align="left">
+                Tester/Secretary
+            </td>
+            <td align="center">
+                <a href="www.linkedin.com/in/ellinoora-aurasmaa" title="Link to Linkedin profile">
+                    <img src="https://lh3.googleusercontent.com/00APBMVQh3yraN704gKCeM63KzeQ-zHUi5wK6E9TjRQ26McyqYBt-zy__4i8GXDAfeys=w300" width="32px" height="32px">
+                </a>
+            </td>
+            <td align="center">
+                <a href="https://github.com/EllinooraAurasmaa" title="Link to GitHub profile">
+                    <img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px">
+                </a>
+            </td>
+        </tr>
+      
     </tbody>
 </table>
 
