--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Tester/Secretary
             </td>
             <td align="center">
-                <a href="www.linkedin.com/in/ellinoora-aurasmaa" title="Link to Linkedin profile">
+                <a href="https://fi.linkedin.com/in/ellinoora-aurasmaa" title="Link to Linkedin profile">
                     <img src="https://lh3.googleusercontent.com/00APBMVQh3yraN704gKCeM63KzeQ-zHUi5wK6E9TjRQ26McyqYBt-zy__4i8GXDAfeys=w300" width="32px" height="32px">
                 </a>
             </td>
