--- a/index.html
+++ b/index.html
@@ -94,6 +94,27 @@
                 </a>
             </td>
         </tr>
+      <tr>
+            <td align="left">
+                <img src="" height="64" width="64">
+            </td>
+            <td align="left">
+                Manninen Eetu
+            </td>
+            <td align="left">
+                Coder
+            </td>
+            <td align="center">
+                <a href="https://fi.linkedin.com/in/eetu-manninen-8884a7b3" title="Link to Linkedin profile">
+                    <img src="https://lh3.googleusercontent.com/00APBMVQh3yraN704gKCeM63KzeQ-zHUi5wK6E9TjRQ26McyqYBt-zy__4i8GXDAfeys=w300" width="32px" height="32px">
+                </a>
+            </td>
+            <td align="center">
+                <a href="https://github.com/ScoutPanda" title="Link to GitHub profile">
+                    <img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px">
+                </a>
+            </td>
+        </tr>
       
     </tbody>
 </table>
