--- a/index.html
+++ b/index.html
@@ -114,8 +114,27 @@
                     <img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px">
                 </a>
             </td>
+        </tr><tr>
+            <td align="left">
+                <img alt="Image" src="" height="64" width="64">
+            </td>
+            <td align="left">
+                Kokkonen Juha-Matti
+            </td>
+            <td align="left">
+                Free mind
+            </td>
+            <td align="center">
+                <a href="https://fi.linkedin.com/in/juha-matti-kokkonen-a17a9512a" title="Link to Linkedin profile">
+                    <img alt="Linkedin" src="https://lh3.googleusercontent.com/00APBMVQh3yraN704gKCeM63KzeQ-zHUi5wK6E9TjRQ26McyqYBt-zy__4i8GXDAfeys=w300" width="32px" height="32px">
+                </a>
+            </td>
+            <td align="center">
+                <a href="https://github.com/H8672" title="Link to GitHub profile">
+                    <img alt="Github" src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px">
+                </a>
+            </td>
         </tr>
-      
     </tbody>
 </table>
 
