--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </tr>
       <tr>
             <td align="left">
-                <img src="" height="64" width="64">
+                <img src="http://student.labranet.jamk.fi/~H3667/pandajee.jpg" height="64" width="64">
             </td>
             <td align="left">
                 Manninen Eetu
