--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
                     <img alt="Github" src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px">
             </a></td>
         </tr>
+        <tr>
+            <td align="left"><img alt="Image" src="http://student.labranet.jamk.fi/~H8482/simo.png" height="64" width="64"></td>
+            <td align="left">Salonen Simo</td>
+            <td align="left">Kirjuri</td>
+            <td align="center"><a href="" title="Link to Linkedin profile">
+                    <img alt="Linkedin" src="https://lh3.googleusercontent.com/00APBMVQh3yraN704gKCeM63KzeQ-zHUi5wK6E9TjRQ26McyqYBt-zy__4i8GXDAfeys=w300" width="32px" height="32px">
+            </a></td>
+            <td align="center"><a href="https://github.com/Salonen" title="Link to GitHub profile">
+                    <img alt="Github" src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280" width="32px" height="32px">
+            </a></td>
+        </tr>
     </tbody>
 </table>
 
