--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p> Page for project work team status 
+<p> Page for project work <a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki/tiimin-statusraportti">team status</a> 
 <h3>Team introduction</h3>
         
 <table>
