--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/Jamk-IT-Tuntikirjaus">View On GitHub</a></li>
+          <li class="wiki"><a href="https://github.com/Jamk-IT-Tuntikirjaus/wiki">View On GitHub Wiki</a></li>
         </nav>
       </div><!-- end header -->
 
@@ -36,7 +37,10 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+          <span aria-hidden="true" class="octicon octicon-link"></span></a>
+          Welcome to GitHub Pages.
+        </h3>
 
 <p> Page for project work <a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki/tiimin-statusraportti">team status</a> 
 <h3>Team introduction</h3>
