--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/Jamk-IT-Tuntikirjaus">View On GitHub</a></li>
-          <li ><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki">View On GitHub Wiki</a></li>
+          <li class="fork"><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki">View On GitHub Wiki</a></li>
         </nav>
       </div><!-- end header -->
 
