--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
           <li class="title"><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki">View On GitHub Wiki</a></li>
           <li class="fork"><a href="https://github.com/Jamk-IT-Tuntikirjaus">View On GitHub</a></li>
-          <li class="download">Download?</li>
+          <li class="downloads">Download?</li>
         </nav>
       </div><!-- end header -->
 
