--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div id="header">
         <nav>
           <li class="downloads"><a href="">Download?</a></li>
-          <li class="title"><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus">View On GitHub Code</a></li>
-          <li class="title"><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki">View On GitHub Wiki</a></li>
-          <li class="fork"><a href="https://github.com/Jamk-IT-Tuntikirjaus">View On GitHub</a></li>
+          <li class="title"><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus/wiki">GitHub Wiki</a></li>
+          <li class="title"><a href="https://github.com/Jamk-IT-Tuntikirjaus/Jamk-IT-Tuntikirjaus">GitHub Code</a></li>
+          <li class="fork"><a href="https://github.com/Jamk-IT-Tuntikirjaus">View onGitHub</a></li>
         </nav>
       </div><!-- end header -->
 
